update: uiux batalha e ajuste de PV que estava puxando errado

--- a/battle/index.html
+++ b/battle/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
-    <div class="battle-field">
+  <div >
+    <div class="battle-field" style="height:100vh;">
       <div class="row mb-3">
         <div class="col-md-6">
           <div class="pokemon-container">
