--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="d-grid gap-3 mt-3">
         <button id="btn-choose" class="btn btn-primary btn-lg">🔍 Choose Pokémon</button>
         <button id="btn-battle" class="btn btn-success btn-lg">⚔️ Battle</button>
-        <button id="btn-random" class="btn btn-warning btn-lg">🎲 Random Battle</button>
-        <button id="btn-reset-team" class="btn btn-danger btn-lg">🔄 Reset Team</button>
+        <!-- <button id="btn-random" class="btn btn-warning btn-lg">🎲 Random Battle</button> -->
+        <!-- <button id="btn-reset-team" class="btn btn-danger btn-lg">🔄 Reset Team</button> -->
       </div>
     </div>
   </div>
