--- a/game/pc/index.html
+++ b/game/pc/index.html
@@ -12,7 +12,7 @@
     <div class="container mt-4">
       
       <h2 class="text-center mb-4">Escolha 6 Pokémon</h2>
-      <input type="text" id="search-input" class="form-control mb-4" placeholder="Pesquisar Pokémon...">
+      <input type="text" id="search-input" class="form-control mb-4" placeholder="Pesquisar Pokémon..." autocomplete="off">
       
       <div id="pokemon-list" class="row g-3">
         <!-- Pokémon cards inseridos via JS -->
