--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pokémon Battle Menu</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Pokémon</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-light">
+<body>
+    <div class="login-container">
+        <h1>Bem-vindo ao Mundo Pokémon!</h1>
+        <div class="login-box">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu" class="pokemon-image">
+            <form id="login-form">
+                <label for="username">Usuário:</label>
+                <input type="text" id="username" name="username" required>
 
-  <div class="container text-center mt-5">
-    <h1 class="mb-4">⚔️ Pokémon Battle</h1>
+                <label for="password">Senha:</label>
+                <input type="password" id="password" name="password" required>
 
-    <div class="card p-4">
-      <h3>Menu Principal</h3>
-      <div class="d-grid gap-3 mt-3">
-        <button id="btn-choose" class="btn btn-primary btn-lg">🔍 Choose Pokémon</button>
-        <button id="btn-battle" class="btn btn-success btn-lg">⚔️ Battle</button>
-        <!-- <button id="btn-random" class="btn btn-warning btn-lg">🎲 Random Battle</button> -->
-        <!-- <button id="btn-reset-team" class="btn btn-danger btn-lg">🔄 Reset Team</button> -->
-      </div>
+                <button type="submit">Entrar</button>
+            </form>
+            <p id="error-message" style="color:red;"></p>
+        </div>
     </div>
-  </div>
 
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
