--- a/game/index.html
+++ b/game/index.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link rel="stylesheet" href="./style.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <div class="navBar">
         <div class="perfil">
             <i class="fas fa-user-circle fa-2x"></i>
-            <span style="font-size: 18px; font-weight: 600;">Treinador</span>
+            <span style="font-weight: 600;">Treinador</span>
         </div>
 
         <div class="resource-container">
@@ -63,12 +68,19 @@
                     </button>
 
                     <button class="menu-btn collection" id="pc-btn">
-                      <i class="fas fa-desktop"></i><br>
-                      Meus Pokémon
+                        <i class="fas fa-desktop"></i><br>
+                        Meus Pokémon
                     </button>
                 </div>
             </div>
+            <div class="pokemon-card">
+                <div class="text-center mb-4" style="color: #2c3e50; font-weight: 700;">
+                    <p>Pokemons Selecionados:</p>
+                    <div id="selected-pokemon" class="selected-pokemon">
 
+                    </div>
+                </div> 
+            </div>
         </div>
     </div>
 
@@ -78,6 +90,7 @@
         <div id="reward-content"></div>
         <button class="btn btn-primary mt-3" id="close-reward">Continuar</button>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="./script.js"></script>
