--- a/game/capture/index.html
+++ b/game/capture/index.html
@@ -53,6 +53,16 @@
         </div>
       </div>
 
+        <div class="row mb-3">
+          <div class="col text-center">
+            <div id="extra-options">
+              <button id="btn-switch" class="btn btn-warning me-2">🔄 Trocar</button>
+              <button id="btn-bag" class="btn btn-info me-2">🎒 Mochila</button>
+              <button id="btn-run" class="btn btn-danger">🏃‍♂️ Fugir</button>
+            </div>
+          </div>
+        </div>
+
       <div class="row">
         <div class="col">
           <div id="log" class="battle-log">
