--- a/game/index.html
+++ b/game/index.html
@@ -73,7 +73,7 @@
                     </button>
                     
                     <button class="menu-btn market" id="market-btn">
-                        <i class="fas fa-store"></i><br>
+                        <i class="fas fa-store"></i>
                         Loja<br>
                         <small>(Em breve)</small>
                     </button>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="pokemon-card">
-                <div class="text-center mb-4" style="color: #2c3e50; font-weight: 700;">
+                <div class="text-center mb-4" style="font-weight: 700;">
                     <p style="font-size: 20px; width:250px; position: absolute; left: 50%; transform: translateX(-50%); top: 2px;">Pokemons Selecionados:</p>
                     <div id="selected-pokemon" class="selected-pokemon">
 
