--- a/game/pc/index.html
+++ b/game/pc/index.html
@@ -7,11 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body class="bg-light">
+  <body >
 
     <div class="container mt-4">
       
-      <h2 class="text-center mb-4">Escolha 6 Pokémon</h2>
+      <!-- <h2 class="text-center mb-4">PC</h2> -->
       <input type="text" id="search-input" class="form-control mb-4" placeholder="Pesquisar Pokémon..." autocomplete="off">
       
       <div id="pokemon-list" class="row g-3">
