update: rota de captura

--- a/game/index.html
+++ b/game/index.html
@@ -99,7 +99,7 @@
 
                 <div class="pokemon-card">
                     <div class="pokemon-header">
-                     GRUPO
+                     MEU GRUPO
                     </div>
                     
                     <div class="loading-spinner" id="loading-spinner">
